Fix: Close sidenavs on mobile breakpoint, Fix: follow audit

--- a/client/src/app/content.scss
+++ b/client/src/app/content.scss
@@ -42,14 +42,6 @@
       float: right;
       margin-left: .8em;
     }
-    @media (max-width: 1050px) {
-      &.image-style-align-right,
-      &.image-style-align-left {
-        float: none;
-        display: block;
-        max-width: 100%;
-      }
-    }
   }
 }
 
